messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-blue
  labels:
    app: messaging
    version: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging
      version: blue
  template:
    metadata:
      labels:
        app: messaging
        version: blue
    spec:
      containers:
        - name: django-blue
          image: messaging_app-web:2.0  # Replace this
          ports:
            - containerPort: 8000
