messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-green
  labels:
    app: messaging
    version: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging
      version: green
  template:
    metadata:
      labels:
        app: messaging
        version: green
    spec:
      containers:
        - name: django-green
          image: messaging_app-web:green  # Replace this
          ports:
            - containerPort: 8000
